Add joke command

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^8.2.0",
 		"envfile": "^3.0.0",
 		"eslint": "^6.6.0",
+		"one-liner-joke": "^1.2.0",
 		"utf-8-validate": "^5.0.2",
 		"winston": "^3.2.1",
 		"yargs": "^14.2.0"
