--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"babel-eslint": "^10.0.3",
 		"bufferutil": "^4.0.1",
 		"cowsay": "^1.4.0",
+		"dilbert": "^1.4.2",
 		"discord.io": "woor/discord.io#gateway_v6",
 		"dotenv": "^8.2.0",
 		"envfile": "^3.0.0",
