--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"babel-eslint": "^10.0.3",
 		"bufferutil": "^4.0.1",
+		"corporate-ipsum": "^1.0.1",
 		"cowsay": "^1.4.0",
 		"dilbert": "^1.4.2",
 		"discord.io": "woor/discord.io#gateway_v6",
