--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
 	},
 	"dependencies": {
 		"@mikemcbride/dad-jokes": "^1.0.0",
+		"ascii-animals": "^1.0.1",
 		"babel-eslint": "^10.0.3",
 		"bufferutil": "^4.0.1",
 		"corporate-ipsum": "^1.0.1",
 		"cowsay": "^1.4.0",
+		"crazy-case": "^0.0.1",
 		"dilbert": "^1.4.2",
 		"discord.io": "woor/discord.io#gateway_v6",
 		"dotenv": "^8.2.0",
 		"envfile": "^3.0.0",
 		"eslint": "^6.6.0",
 		"funny-words": "^0.1.2",
+		"garble": "^0.1.1",
 		"one-liner-joke": "^1.2.0",
 		"thesaurize": "^1.0.11",
 		"utf-8-validate": "^5.0.2",
